--- a/Nxg.Web.Framework/Nxg.Web.Framework.csproj
+++ b/Nxg.Web.Framework/Nxg.Web.Framework.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
-        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\nopCommerce\src\Presentation\Nop.Web\Nop.Web.csproj" />
+      <ProjectReference Include="..\nopCommerce\src\Presentation\Nop.Web.Framework\Nop.Web.Framework.csproj" />
     </ItemGroup>
 
 </Project>
