--- a/Nxg.Web/App_Data/appsettings.json
+++ b/Nxg.Web/App_Data/appsettings.json
@@ -57,8 +57,8 @@
     "JavaScriptBundleSuffix": ".scripts",
     "CssBundleSuffix": ".styles",
     "EnableCaching": null,
-    "EnableMemoryCache": true,
-    "EnableDiskCache": true,
+    "EnableMemoryCache": false,
+    "EnableDiskCache": false,
     "EnableTagHelperBundling": false,
     "CdnUrl": null,
     "CacheDirectory": null,
