--- a/.gitignore
+++ b/.gitignore
@@ -206,37 +206,37 @@ src/Tests/Nop.Tests/Connections.resx
 #######################
 ## nxg specific
 ###########
-Nxg.Web/.config/*
-Nxg.Web/App_Data/browscap.xml
-Nxg.Web/App_Data/installedPlugins.json
-Nxg.Web/App_Data/plugins.json
-Nxg.Web/App_Data/dataSettings.json
-Nxg.Web/App_Data/appsettings.json
-Nxg.Web/App_Data/TempUploads/*
-!Nxg.Web/App_Data/TempUploads/Index.htm
-Nxg.Web/App_Data/DataProtectionKeys/*
-!Nxg.Web/App_Data/DataProtectionKeys/Index.htm
-Nxg.Web/node_modules/*
-Nxg.Web/Plugins/*
-!Nxg.Web/Plugins/Uploaded
-Nxg.Web/Plugins/Uploaded/*
-!Nxg.Web/Plugins/Uploaded/placeholder.txt
-Nxg.Web/wwwroot/.well-known/*
-!Nxg.Web/wwwroot/.well-known/Index.htm
-Nxg.Web/wwwroot/bundles/*
-!Nxg.Web/wwwroot/bundles/Index.htm
-Nxg.Web/wwwroot/db_backups/*.bak
-!Nxg.Web/wwwroot/db_backups/Index.htm
-Nxg.Web/wwwroot/images/thumbs/*
-!Nxg.Web/wwwroot/images/thumbs/placeholder.txt
-Nxg.Web/wwwroot/images/uploaded/*
-!Nxg.Web/wwwroot/images/uploaded/placeholder.txt
-Nxg.Web/wwwroot/files/exportimport/*
-!Nxg.Web/wwwroot/files/exportimport/Index.htm
-Nxg.Web/wwwroot/lib_npm/cldr-data/main/*
-!Nxg.Web/wwwroot/lib_npm/cldr-data/main/en/
-!Nxg.Web/wwwroot/lib_npm/cldr-data/main/main.zip
-Nxg.Web/wwwroot/sitemaps/*
-!Nxg.Web/wwwroot/sitemaps/Index.htm
+src/Presentation/Nxg.Web/.config/*
+src/Presentation/Nxg.Web/App_Data/browscap.xml
+src/Presentation/Nxg.Web/App_Data/installedPlugins.json
+src/Presentation/Nxg.Web/App_Data/plugins.json
+src/Presentation/Nxg.Web/App_Data/dataSettings.json
+src/Presentation/Nxg.Web/App_Data/appsettings.json
+src/Presentation/Nxg.Web/App_Data/TempUploads/*
+!src/Presentation/Nxg.Web/App_Data/TempUploads/Index.htm
+src/Presentation/Nxg.Web/App_Data/DataProtectionKeys/*
+!src/Presentation/Nxg.Web/App_Data/DataProtectionKeys/Index.htm
+src/Presentation/Nxg.Web/node_modules/*
+src/Presentation/Nxg.Web/Plugins/*
+!src/Presentation/Nxg.Web/Plugins/Uploaded
+src/Presentation/Nxg.Web/Plugins/Uploaded/*
+!src/Presentation/Nxg.Web/Plugins/Uploaded/placeholder.txt
+src/Presentation/Nxg.Web/wwwroot/.well-known/*
+!src/Presentation/Nxg.Web/wwwroot/.well-known/Index.htm
+src/Presentation/Nxg.Web/wwwroot/bundles/*
+!src/Presentation/Nxg.Web/wwwroot/bundles/Index.htm
+src/Presentation/Nxg.Web/wwwroot/db_backups/*.bak
+!src/Presentation/Nxg.Web/wwwroot/db_backups/Index.htm
+src/Presentation/Nxg.Web/wwwroot/images/thumbs/*
+!src/Presentation/Nxg.Web/wwwroot/images/thumbs/placeholder.txt
+src/Presentation/Nxg.Web/wwwroot/images/uploaded/*
+!src/Presentation/Nxg.Web/wwwroot/images/uploaded/placeholder.txt
+src/Presentation/Nxg.Web/wwwroot/files/exportimport/*
+!src/Presentation/Nxg.Web/wwwroot/files/exportimport/Index.htm
+src/Presentation/Nxg.Web/wwwroot/lib_npm/cldr-data/main/*
+!src/Presentation/Nxg.Web/wwwroot/lib_npm/cldr-data/main/en/
+!src/Presentation/Nxg.Web/wwwroot/lib_npm/cldr-data/main/main.zip
+src/Presentation/Nxg.Web/wwwroot/sitemaps/*
+!src/Presentation/Nxg.Web/wwwroot/sitemaps/Index.htm
 packages/*
 .idea
