--- a/.gitignore
+++ b/.gitignore
@@ -168,40 +168,40 @@ $RECYCLE.BIN/
 glob:*.user
 *.patch
 *.hg
-src/Presentation/Nop.Web/.config/*
-src/Presentation/Nop.Web/App_Data/browscap.xml
-src/Presentation/Nop.Web/App_Data/installedPlugins.json
-src/Presentation/Nop.Web/App_Data/plugins.json
-src/Presentation/Nop.Web/App_Data/dataSettings.json
-src/Presentation/Nop.Web/App_Data/appsettings.json
-src/Presentation/Nop.Web/App_Data/TempUploads/*
-!src/Presentation/Nop.Web/App_Data/TempUploads/Index.htm
-src/Presentation/Nop.Web/App_Data/DataProtectionKeys/*
-!src/Presentation/Nop.Web/App_Data/DataProtectionKeys/Index.htm
-src/Presentation/Nop.Web/node_modules/*
-src/Presentation/Nop.Web/Plugins/*
-!src/Presentation/Nop.Web/Plugins/Uploaded
-src/Presentation/Nop.Web/Plugins/Uploaded/*
-!src/Presentation/Nop.Web/Plugins/Uploaded/placeholder.txt
-src/Presentation/Nop.Web/wwwroot/.well-known/*
-!src/Presentation/Nop.Web/wwwroot/.well-known/Index.htm
-src/Presentation/Nop.Web/wwwroot/bundles/*
-!src/Presentation/Nop.Web/wwwroot/bundles/Index.htm
-src/Presentation/Nop.Web/wwwroot/db_backups/*.bak
-!src/Presentation/Nop.Web/wwwroot/db_backups/Index.htm
-src/Presentation/Nop.Web/wwwroot/images/thumbs/*
-!src/Presentation/Nop.Web/wwwroot/images/thumbs/placeholder.txt
-src/Presentation/Nop.Web/wwwroot/images/uploaded/*
-!src/Presentation/Nop.Web/wwwroot/images/uploaded/placeholder.txt
-src/Presentation/Nop.Web/wwwroot/files/exportimport/*
-!src/Presentation/Nop.Web/wwwroot/files/exportimport/Index.htm
-src/Presentation/Nop.Web/wwwroot/lib_npm/cldr-data/main/*
-!src/Presentation/Nop.Web/wwwroot/lib_npm/cldr-data/main/en/
-!src/Presentation/Nop.Web/wwwroot/lib_npm/cldr-data/main/main.zip
-src/Presentation/Nop.Web/wwwroot/sitemaps/*
-!src/Presentation/Nop.Web/wwwroot/sitemaps/Index.htm
-src/packages/*
-src/Tests/Nop.Tests/Connections.resx
+src/nopCommerce/src/Presentation/Nop.Web/.config/*
+src/nopCommerce/src/Presentation/Nop.Web/App_Data/browscap.xml
+src/nopCommerce/src/Presentation/Nop.Web/App_Data/installedPlugins.json
+src/nopCommerce/src/Presentation/Nop.Web/App_Data/plugins.json
+src/nopCommerce/src/Presentation/Nop.Web/App_Data/dataSettings.json
+src/nopCommerce/src/Presentation/Nop.Web/App_Data/appsettings.json
+src/nopCommerce/src/Presentation/Nop.Web/App_Data/TempUploads/*
+!src/nopCommerce/src/Presentation/Nop.Web/App_Data/TempUploads/Index.htm
+src/nopCommerce/src/Presentation/Nop.Web/App_Data/DataProtectionKeys/*
+!src/nopCommerce/src/Presentation/Nop.Web/App_Data/DataProtectionKeys/Index.htm
+src/nopCommerce/src/Presentation/Nop.Web/node_modules/*
+src/nopCommerce/src/Presentation/Nop.Web/Plugins/*
+!src/nopCommerce/src/Presentation/Nop.Web/Plugins/Uploaded
+src/nopCommerce/src/Presentation/Nop.Web/Plugins/Uploaded/*
+!src/nopCommerce/src/Presentation/Nop.Web/Plugins/Uploaded/placeholder.txt
+src/nopCommerce/src/Presentation/Nop.Web/wwwroot/.well-known/*
+!src/nopCommerce/src/Presentation/Nop.Web/wwwroot/.well-known/Index.htm
+src/nopCommerce/src/Presentation/Nop.Web/wwwroot/bundles/*
+!src/nopCommerce/src/Presentation/Nop.Web/wwwroot/bundles/Index.htm
+src/nopCommerce/src/Presentation/Nop.Web/wwwroot/db_backups/*.bak
+!src/nopCommerce/src/Presentation/Nop.Web/wwwroot/db_backups/Index.htm
+src/nopCommerce/src/Presentation/Nop.Web/wwwroot/images/thumbs/*
+!src/nopCommerce/src/Presentation/Nop.Web/wwwroot/images/thumbs/placeholder.txt
+src/nopCommerce/src/Presentation/Nop.Web/wwwroot/images/uploaded/*
+!src/nopCommerce/src/Presentation/Nop.Web/wwwroot/images/uploaded/placeholder.txt
+src/nopCommerce/src/Presentation/Nop.Web/wwwroot/files/exportimport/*
+!src/nopCommerce/src/Presentation/Nop.Web/wwwroot/files/exportimport/Index.htm
+src/nopCommerce/src/Presentation/Nop.Web/wwwroot/lib_npm/cldr-data/main/*
+!src/nopCommerce/src/Presentation/Nop.Web/wwwroot/lib_npm/cldr-data/main/en/
+!src/nopCommerce/src/Presentation/Nop.Web/wwwroot/lib_npm/cldr-data/main/main.zip
+src/nopCommerce/src/Presentation/Nop.Web/wwwroot/sitemaps/*
+!src/nopCommerce/src/Presentation/Nop.Web/wwwroot/sitemaps/Index.htm
+src/nopCommerce/src/packages/*
+src/nopCommerce/src/Tests/Nop.Tests/Connections.resx
 
 #######################
 ## nxg specific
@@ -238,5 +238,5 @@ src/Presentation/Nxg.Web/wwwroot/lib_npm/cldr-data/main/*
 !src/Presentation/Nxg.Web/wwwroot/lib_npm/cldr-data/main/main.zip
 src/Presentation/Nxg.Web/wwwroot/sitemaps/*
 !src/Presentation/Nxg.Web/wwwroot/sitemaps/Index.htm
-packages/*
+src/packages/*
 .idea
