custom langs / migrations and and admin page

--- a/src/Libraries/Nxg.Data/Nxg.Data.csproj
+++ b/src/Libraries/Nxg.Data/Nxg.Data.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\nopCommerce\src\Libraries\Nop.Data\Nop.Data.csproj" />
+      <ProjectReference Include="..\..\nopCommerce\src\Libraries\Nop.Data\Nop.Data.csproj" />
     </ItemGroup>
 
 </Project>
