--- a/src/Libraries/Nxg.Core/Nxg.Core.csproj
+++ b/src/Libraries/Nxg.Core/Nxg.Core.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\nopCommerce\src\Libraries\Nop.Core\Nop.Core.csproj" />
+      <ProjectReference Include="..\..\nopCommerce\src\Libraries\Nop.Core\Nop.Core.csproj" />
     </ItemGroup>
 
 </Project>
