--- a/src/Presentation/Nxg.Web.Framework/Nxg.Web.Framework.csproj
+++ b/src/Presentation/Nxg.Web.Framework/Nxg.Web.Framework.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Libraries\Nxg.Core\Nxg.Core.csproj" />
+      <ProjectReference Include="..\..\Libraries\Nxg.Services\Nxg.Services.csproj" />
       <ProjectReference Include="..\..\nopCommerce\src\Presentation\Nop.Web.Framework\Nop.Web.Framework.csproj" />
     </ItemGroup>
 
